[gd_scene load_steps=21 format=3 uid="uid://5ni1yt1b1udo"]

[ext_resource type="Script" path="res://Old/outro.gd" id="1_7d5d1"]
[ext_resource type="Texture2D" uid="uid://cpfwib278eu3c" path="res://cutscene/outro1.png" id="3_i558i"]
[ext_resource type="Texture2D" uid="uid://bjr0lndkdtygd" path="res://cutscene/outro2.png" id="4_yfon4"]
[ext_resource type="Texture2D" uid="uid://c50vrtfd4ndnh" path="res://cutscene/intro2.png" id="5_qy7vy"]
[ext_resource type="AudioStream" uid="uid://nwybyu26iwuh" path="res://bgm/探偵の日常.mp3" id="7_2u8vn"]
[ext_resource type="FontFile" uid="uid://06djxm4iqomb" path="res://Old/PixelGameFont.ttf" id="7_y5wfi"]
[ext_resource type="AudioStream" uid="uid://batmxqpt643kh" path="res://bgm/button-124476.mp3" id="8_40lgy"]
[ext_resource type="Texture2D" uid="uid://dvg4tjec23j4q" path="res://cutscene/intro4.5.png" id="8_sxnwi"]
[ext_resource type="Texture2D" uid="uid://mq6ynu360k4k" path="res://art2/touch.png" id="9_mbak3"]

[sub_resource type="Animation" id="Animation_qxtgi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Sprites/intro1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Sprites/intro2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tq083"]
resource_name = "intro2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Sprites/intro2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_qy7vy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Sprites/intro2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Sprites/intro2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_dum8r"]
resource_name = "outro1"
length = 21.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Sprites/intro1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_i558i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Sprites/intro1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Sprites/intro1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 10.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Sprites/intro2:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(10.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_yfon4")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/Sprites/intro2:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(10.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/Sprites/intro2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 10.1, 20.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(9.9, 19.9),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pause_anim"
}, {
"args": [],
"method": &"pause_anim"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Control/Balloon/Label:visible_ratio")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 9.1, 10, 10.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Control/Balloon/Label2:visible_ratio")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(10.1, 19, 20, 20.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Control/Balloon:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.1, 20.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Control/Sprites/ColorRect:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(8.6, 9.1, 12.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Control/Sprites/ColorRect:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(9.1, 9.8, 9.8001, 10.1, 12.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2j8dx"]
_data = {
"RESET": SubResource("Animation_qxtgi"),
"intro2": SubResource("Animation_tq083"),
"outro1": SubResource("Animation_dum8r")
}

[sub_resource type="CanvasTexture" id="CanvasTexture_nv3gw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_235ry"]
content_margin_left = 6.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 3.0
bg_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.345098, 0.345098, 0.345098, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ufjut"]
content_margin_left = 6.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 3.0
bg_color = Color(0.227451, 0.227451, 0.227451, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fcbqo"]
content_margin_left = 6.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 3.0
bg_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6i7a"]
content_margin_left = 6.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 3.0
bg_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy0d5"]
bg_color = Color(0.0862745, 0.0666667, 0.105882, 0.784314)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Theme" id="Theme_5fdct"]
default_font = ExtResource("7_y5wfi")
default_font_size = 12
Button/styles/disabled = SubResource("StyleBoxFlat_235ry")
Button/styles/focus = SubResource("StyleBoxFlat_ufjut")
Button/styles/hover = SubResource("StyleBoxFlat_fcbqo")
Button/styles/normal = SubResource("StyleBoxFlat_t6i7a")
MarginContainer/constants/margin_bottom = 4
MarginContainer/constants/margin_left = 8
MarginContainer/constants/margin_right = 8
MarginContainer/constants/margin_top = 4
Panel/styles/panel = SubResource("StyleBoxFlat_uy0d5")

[node name="Outro" type="Node"]
script = ExtResource("1_7d5d1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2j8dx")
}
movie_quit_on_finish = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 331.0
offset_bottom = 190.0
texture = SubResource("CanvasTexture_nv3gw")

[node name="Sprites" type="Node2D" parent="Control"]

[node name="intro1" type="Sprite2D" parent="Control/Sprites"]
position = Vector2(160.5, 90.5)
scale = Vector2(1.01562, 1.01667)
texture = ExtResource("3_i558i")

[node name="intro2" type="Sprite2D" parent="Control/Sprites"]
visible = false
position = Vector2(159.5, 91)
scale = Vector2(1.02813, 1.04444)
texture = ExtResource("5_qy7vy")

[node name="ColorRect" type="ColorRect" parent="Control/Sprites"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_right = 325.0
offset_bottom = 185.0

[node name="Balloon" type="Panel" parent="Control"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 71.0
offset_right = 278.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_5fdct")

[node name="Label" type="Label" parent="Control/Balloon"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 298.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("7_y5wfi")
text = "At the end of the battle. Fuwamoco were able to 
defeat the infected warden  & everything turn 
to normal. They finally able to escape the prison."
visible_characters = 6
visible_ratio = 0.043956

[node name="Label2" type="Label" parent="Control/Balloon"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 298.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("7_y5wfi")
text = "After getting outside of the prison, the group 
decided to make a name for their group and join a 
Vtuber agency to spread cute and happiness to 
the world!
"
visible_characters = 0
visible_ratio = 0.0

[node name="intro4_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(156, 88)
rotation = -0.00119449
scale = Vector2(0.979, 1)
texture = ExtResource("8_sxnwi")

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2u8vn")
volume_db = -60.0
autoplay = true
bus = &"BGM"

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_40lgy")
volume_db = -50.0
bus = &"SFX"

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0)
texture_normal = ExtResource("9_mbak3")
texture_pressed = ExtResource("9_mbak3")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_touch_screen_button_released"]
